# write-html

./: Cargo.toml
src/: main.rs
write-html/: Cargo.toml
write-html/src/: lib.rs
write-scope/: Cargo.toml
write-scope/src/: lib.rs  xml.rs
write_scope/: Cargo.toml
write_scope/src/: lib.rs  with_std.rs
write_scope_html/: Cargo.toml
write_scope_html/src/: lib.rs
